Change position to fixed to fix scrolling issue on mobile

--- a/frontend/src/app/favourites-list/favourites-list.component.css
+++ b/frontend/src/app/favourites-list/favourites-list.component.css
@@ -13,8 +13,9 @@
 }
 
 .search {
-  position: absolute;
+  position: fixed;
   bottom: 4rem;
+  z-index: 1000;
   margin-left: auto;
   margin-right: auto;
   left: 0;
